# c-undergrad-contests

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md  generic_make
00-advanced/4-strings-concat/: .gitignore  CMakeLists.txt  README.md  gentest.py
00-advanced/4-strings-concat/app/: CMakeLists.txt
00-advanced/4-strings-concat/app/src/: dspair.c  dspair.h  main.c  util.c  util.h
00-advanced/4-strings-concat/lib/: CMakeLists.txt
00-advanced/dictionary/: .gitignore  CMakeLists.txt  README.md  run_tests.sh
00-advanced/dictionary/app/: CMakeLists.txt
00-advanced/dictionary/app/src/: counter.c  hashtable.c  main.c  util.c  util.h
00-advanced/dictionary/lib/: CMakeLists.txt
00-advanced/dictionary/lib/hashtable/: .gitignore  CMakeLists.txt  README.md  gentest.py  run_tests.sh
00-advanced/dictionary/lib/hashtable/include/: counter.h  hashtable.h  spair.h
00-advanced/dictionary/lib/hashtable/src/: counter.c  hashtable.c  spair.c
00-advanced/dictionary/lib/hashtable/test/: CMakeLists.txt
00-advanced/dictionary/lib/hashtable/test/src/: main.c  util.c
00-advanced/dictionary/lib/llistc/: CMakeLists.txt
00-advanced/dictionary/lib/llistc/src/: sllistc.c
00-advanced/ffmpeg/: CMakeLists.txt
00-advanced/ffmpeg/src/: main.c
00-advanced/karatsuba/app/: CMakeLists.txt
00-advanced/karatsuba/app/src/: main.c
00-advanced/karatsuba/lib/polynomial/include/: polynomial.h
00-advanced/karatsuba/lib/polynomial/src/: polynomial.c
00-advanced/kruskal/: .gitignore  CMakeLists.txt  README.md  run_tests.sh
00-advanced/kruskal/include/: error.h
00-advanced/kruskal/src/: main.c  udgraph.c  udgraph.h
00-advanced/newton-fractal/: .gitignore  CMakeLists.txt
00-advanced/newton-fractal/lib/: CMakeLists.txt  hashtable  llistc
00-advanced/newton-fractal/shaders/: frag.fs  vertex.vs
00-advanced/newton-fractal/src/: bitmap.c  bitmap.h  drawer.h  julia.cc  logger.h  main.c  main.cc  sdlutil.cc  shader.c  shader.h  util.h
00-advanced/toom-cook/: CMakeLists.txt
00-advanced/toom-cook/app/src/: main.c
00-advanced/toom-cook/lib/polynomial/: CMakeLists.txt
00-advanced/toom-cook/lib/polynomial/include/: frac.h  mat.h  poly.h
00-advanced/toom-cook/lib/polynomial/src/: frac.c  mat.c  poly.c
00-advanced/topdown-parsing/: CMakeLists.txt
00-advanced/topdown-parsing/src/: error.h  lexer.c  lexer.h  main.c  parser.c  parser.h  token.c  token.h
00-optional/fsapr/src/: main.c
00-optional/ldiv/src/: main.c
00-optional/strbin/src/: main.c
00-optional/stringtable/: Makefile
00-optional/stringtable/src/: main.cpp
01-introduction/: generic_make
01-introduction/de/src/: main.c
01-introduction/ee/: Makefile
01-introduction/ee/src/: main.c
01-introduction/fm/src/: main.c
01-introduction/mf/src/: main.c
01-introduction/ns/src/: main.c
01-introduction/pp/src/: main.c
01-introduction/rl/src/: main.c
01-introduction/sf/src/: main.c
02-algorithms/cc/src/: main.c
02-algorithms/ft/src/: main.c
02-algorithms/gf/src/: main.c
02-algorithms/hwe/src/: main.c
02-algorithms/lm/src/: main.c
02-algorithms/pe/src/: main.c
02-algorithms/pf/src/: main.c
02-algorithms/pn/src/: main.c
02-algorithms/ps/src/: main.c
03-arrays/asb/src/: main.c
03-arrays/cm/src/: main.c
03-arrays/cse/src/: main.c
03-arrays/me/src/: main.c
03-arrays/mp/src/: main.c
03-arrays/mpk/contest/: Makefile
03-arrays/mpk/generic/: CMakeLists.txt
03-arrays/mpk/src/: main.c
03-arrays/ms/src/: main.c
03-arrays/msb/src/: main.c
03-arrays/px/src/: main.c
03-arrays/scb/src/: main.c
03-arrays/si/src/: main.c
03-arrays/sse/src/: main.c
04-strings/bp/src/: main.c
04-strings/mc/src/: main.c
04-strings/sa/src/: main.c
04-strings/scn/src/: main.c
04-strings/sp/src/: main.c
04-strings/sr/src/: main.c
04-strings/su/src/: main.c
04.5-greedy/01-powers-of-four/src/: main.c
05-data/al/src/: main.c
05-data/dct/generic/: .gitignore  CMakeLists.txt  gentest.py
05-data/dct/generic/app/: CMakeLists.txt
05-data/dct/generic/app/src/: main.c  (+4 more)
05-data/dct/generic/lib/: CMakeLists.txt
05-data/dct/generic/lib/hashtable/: CMakeLists.txt
05-data/dct/generic/lib/hashtable/include/: hashtable.h
05-data/dct/generic/lib/hashtable/src/: hashtable.c
05-data/dct/src/: main.c
05-data/hl/src/: main.c
05-data/hl2/src/: main.c
05-data/kc/src/: main.c
05-data/lr/src/: main.c
05-data/ls/src/: main.c
05-data/rg/src/: main.c
05-data/tt/src/: main.c
05-data/xc/src/: main.c
06-float/dh/src/: main.c
06-float/dt/src/: main.c
06-float/ec/src/: main.c
06-float/en/src/: main.c
06-float/ex/src/: main.c
06-float/rp/src/: main.c
07-assembly/ap/src/: coolisprime.s  isprime.c  isprime.s  main.c
07-assembly/as/src/: keywords.gperf  main.c
07-assembly/as2/src/: main.c
07-assembly/mk/src/: main.c
07.5-lexing-parsing/: sanitise.sh
08-caches/lc/: .clang-format  .gitignore  CMakeLists.txt  lru.py  run_tests.sh
08-caches/lc/contest/: merged.c
08-caches/lc/include/: error.h  memutil.h
08-caches/lc/lib/: CMakeLists.txt  hashtable  llistc
08-caches/lc/src/: lru.c  lru.h  lruhash.c  lruhash.h  main.c
10-entrance/a/src/: main.c
10-entrance/b/src/: main.c
10-entrance/c/src/: main.c
10-entrance/e/src/: main.c
10-entrance/f/src/: main.c
10-entrance/g/src/: main.c
11-test/01-distance/src/: main.c
11-test/02-paper/src/: main.c
11-test/03-inregion/src/: main.c
11-test/04-spiral/src/: main.c
11-test/05-transform/src/: main.c
11-test/06-naf/src/: main.c
11-test/08-lsort/src/: main.c
12-exam/01-сmem/src/: main.c
12-exam/02-lequal/src/: main.c
12-exam/03-ssort/src/: main.c
12-exam/04-octbin/src/: main.c
12-exam/05-lmul/src/: main.c
12-exam/07-normalize-path/src/: main.c
12-exam/08-seq/src/: main.c
21-dynamic/02-ways/src/: main.c
21-dynamic/03-triangle/src/: main.c
22-greedy/: sanitise.sh
22-greedy/03-schedule-intervals/src/: main.c
22-greedy/06-cover-points/src/: main.c
22-greedy/gl/src/: main.c
22-greedy/hwg/src/: main.c
23-lexing-parsing/lx/src/: main.c
23-lexing-parsing/st/src/: main.c  rpn.c
(+8 files in other folders)
